@@ -1,0 +1,79 @@
+
+process PROD  = {
+
+ PSet options = {
+  untracked bool wantSummary=true 
+  untracked bool makeTriggerResults = true
+  vstring listOfTriggers = { "p1a","p2a" }
+ }
+
+ source = EmptySource { untracked int32 maxEvents = 99 }
+
+ module m1a = IntProducer { int32 ivalue = 1 }
+ module m2a = IntProducer { int32 ivalue = 2 }
+ module m3a = IntProducer { int32 ivalue = 3 }
+ module m4a = IntProducer { int32 ivalue = 4 }
+ module m5a = IntProducer { int32 ivalue = 5 }
+ module m6a = IntProducer { int32 ivalue = 6 }
+
+ module a1 = TestResultAnalyzer	{
+   untracked string name = "a1"
+   untracked bool dump = true
+   untracked int32 numbits = 2
+ }
+
+ module f1 = TestFilterModule {
+   untracked bool onlyOne = true
+   untracked int32 acceptValue = 30
+ }
+
+ module f2 = TestFilterModule {
+   untracked bool onlyOne = true
+   untracked int32 acceptValue = 70
+ }
+
+ module f3 = TestFilterModule {
+   untracked bool onlyOne = true
+   untracked int32 acceptValue = 12
+ }
+
+ module f4 = TestFilterModule {
+   untracked bool onlyOne = false
+   untracked int32 acceptValue = 30
+ }
+
+ module f5 = TestFilterModule {
+   untracked bool onlyOne = false
+   untracked int32 acceptValue = 70
+ }
+
+ module f6 = TestFilterModule {
+   untracked bool onlyOne = false
+   untracked int32 acceptValue = 12
+ }
+
+ module outp4 = SewerModule {
+   string name = "for_*"
+   int32 shouldPass = 4
+
+   PSet SelectEvents = { vstring SelectEvents = { "*" } }
+ }
+
+ module outp7 = SewerModule {
+   string name = "for_none"
+   int32 shouldPass = 99
+ }
+
+
+ path p1a = { f1,m1a }
+ path p2a = { f2,m2a }
+ path p3a = { f3,m3a }
+ path p4a = { f4,m4a }
+ path p5a = { f5,m5a }
+ path p6a = { f6,m6a }
+
+ endpath e1 = { a1 }
+ endpath e2 = { outp4 }
+ endpath e3 = { outp7 }
+
+}
